tests/Checker/everything/errors/6d.vc
int main() {
    boolean a;
    int b = a = 3;
    return 1;
}
